# agentfacts-registry

./: .gitignore  Dockerfile  README.md  SKILL.md  SUBMISSION.md  pyproject.toml  render.yaml
docs/superpowers/plans/: 2026-06-24-agentfacts-registry.md
docs/superpowers/specs/: 2026-06-24-agentfacts-registry-design.md
src/agentfacts/: __init__.py  app.py  crypto.py  errors.py  models.py  seed.py  service.py  store.py
tests/: conftest.py  test_api.py  test_crypto.py  test_models.py  test_seed.py  test_service.py  test_smoke.py  test_store.py
